WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
211374
REGRESSION(
r260571
): RequestedScrollPosition doesn't have its scroll change applied to layers anymore
https://bugs.webkit.org/show_bug.cgi?id=211374
Summary
REGRESSION(r260571): RequestedScrollPosition doesn't have its scroll change a...
Zan Dobersek
Reported
2020-05-04 03:42:27 PDT
After
r260571
, in the Nicosia scrolling mechanisms, scrolling changes applied onto the main-frame scrolling nodes through the RequestedScrollPosition state property change don't have any effect anymore. I assume this problem isn't exhibited on Mac/iOS.
https://trac.webkit.org/changeset/260571/webkit
This leaves the RequestedScrollPosition state changes to have no effect on the positioning of the layers, ergo scrolling via scrollbars or keyboard does not behave correctly. A call to applyLayerPositionsInternal() at the end of the ScrollingTree::commitTreeState() would for instance restore the correct behavior.
Attachments
Patch
(4.13 KB, patch)
2020-05-13 05:57 PDT
,
Zan Dobersek
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2020-05-04 09:40:46 PDT
This is because of me juggling which when layer positions are applied. Layer positions should be getting applied at the end of the rendering updates; on macOS this happens in Page::finalizeRenderingUpdate().
Zan Dobersek
Comment 2
2020-05-13 05:52:18 PDT
(In reply to Simon Fraser (smfr) from
comment #1
)
> This is because of me juggling which when layer positions are applied. > > Layer positions should be getting applied at the end of the rendering > updates; on macOS this happens in Page::finalizeRenderingUpdate().
That's what's needed, thanks for the tip.
Zan Dobersek
Comment 3
2020-05-13 05:57:58 PDT
Created
attachment 399254
[details]
Patch
Carlos Garcia Campos
Comment 4
2020-05-13 06:00:23 PDT
Comment on
attachment 399254
[details]
Patch Thanks!
Zan Dobersek
Comment 5
2020-05-13 07:42:48 PDT
Comment on
attachment 399254
[details]
Patch Clearing flags on attachment: 399254 Committed
r261616
: <
https://trac.webkit.org/changeset/261616
>
Zan Dobersek
Comment 6
2020-05-13 07:42:52 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 7
2020-05-13 07:43:13 PDT
<
rdar://problem/63183761
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug