Source/WebKit/WebProcess/WebPage/CoordinatedGraphics/CompositingCoordinator.cpp
@@ -121,21 +121,22 @@ bool CompositingCoordinator::flushPendingLayerChanges()
 
     initializeRootCompositingLayerIfNeeded();
 
+    m_page.updateRendering();
+    m_page.flushPendingEditorStateUpdate();
+
     m_rootLayer->flushCompositingStateForThisLayerOnly();
     m_client.didFlushRootLayer(m_visibleContentsRect);
 
     if (m_overlayCompositingLayer)
         m_overlayCompositingLayer->flushCompositingState(FloatRect(FloatPoint(), m_rootLayer->size()));
 
-    bool didSync = m_page.corePage()->mainFrame().view()->flushCompositingStateIncludingSubframes();
+    m_page.finalizeRenderingUpdate({ FinalizeRenderingUpdateFlags::ApplyScrollingTreeLayerPositions });
 
     auto& coordinatedLayer = downcast<CoordinatedGraphicsLayer>(*m_rootLayer);
     coordinatedLayer.updateContentBuffersIncludingSubLayers();
     coordinatedLayer.syncPendingStateChangesIncludingSubLayers();
 
     if (m_shouldSyncFrame) {
-        didSync = true;
-
         m_state.nicosia.scene->accessState(
             [this](Nicosia::Scene::State& state)
             {
@@ -172,7 +173,7 @@ bool CompositingCoordinator::flushPendingLayerChanges()
         m_shouldSyncFrame = false;
     }
 
-    return didSync;
+    return true;
 }
 
 double CompositingCoordinator::timestamp() const
